--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ reqwest = { version = "0.11.24", default-features = false, features = ["json", "
 reqwest-middleware = "0.2.4"
 reqwest-retry = "0.2.0"
 serde = { version = "1.0.168", features = ["derive"] }
+socket2 = "0.5.5"
 time = { version = "0.3.35", features = ["formatting", "parsing"] }
 tokio = { version = "1.28.2", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "macros", "parking_lot", "fs"] }
 tracing = "0.1"
