--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ reqwest-middleware = "0.2.4"
 reqwest-retry = "0.2.0"
 serde = { version = "1.0.168", features = ["derive"] }
 axum = "0.7"
+poem = "0.3"
 time = { version = "0.3.35", features = ["formatting", "parsing"] }
 tokio = { version = "1.28.2", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "macros", "parking_lot", "fs"] }
 tracing = "0.1"
