--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,9 @@ base64 = "0.21.5"
 serde_json = "1.0.107"
 atty = "0.2.14"
 qr2term = "0.3.1"
+sxd-xpath = "=0.3.0"
+sxd-document = "=0.2.6"
+
 self_update = { version = "0.37.0", default-features = false, features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }
 
 # TLS server support
@@ -78,3 +81,5 @@ assets = [
     { source = "LICENSE", dest = "/usr/share/doc/aliyundrive-webdav/LICENSE", doc = true, mode = "0644" },
     { source = "systemd.service", dest = "/etc/systemd/system/aliyundrive-webdav.service", config = true, mode = "0644" },
 ]
+
+
