--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ serde_json = "1.0.107"
 atty = "0.2.14"
 qr2term = "0.3.1"
 self_update = { version = "0.37.0", default-features = false, features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }
+ldap3 = "0.9"
 
 # TLS server support
 rustls-pemfile = { version = "1.0.0", optional = true }
