--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ mongodb = "2.8"
 bson = "2.8"
 rumqttc = "0.25.0"
 imap = "2.4.1"
+actix-cors = "0.7"
+rocket_cors = "0.6"
 
 
 self_update = { version = "0.37.0", default-features = false, features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }
