--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ rumqttc = "0.25.0"
 imap = "2.4.1"
 actix-cors = "0.7"
 rocket_cors = "0.6"
+actix-web = "4.4"
 
 
 self_update = { version = "0.37.0", default-features = false, features = ["archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }
